--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="nav-top">
 
-      <div class="icon">
+      <div class="icon active">
         <i class="fa-solid fa-house"></i>
         <p>Home</p>
       </div>
@@ -61,9 +61,11 @@
       </div>
     </div>
     <div id="home">
-      <div id="albums">
+      <div style="overflow-x: scroll;" id="albums">
 
       </div>
+
+
       <div id="songsDiv">
         <div id="songsNav">
           <p>Recently played</p>
